--- a/lib/config/config/factories.yml
+++ b/lib/config/config/factories.yml
@@ -99,6 +99,7 @@ default:
             level: debug
             file: %SF_LOG_DIR%/%SF_APP%_%SF_ENVIRONMENT%.log
         sf_psr_logger:
+          enabled: false
           class: sfPsrLoggerAdapter
           param:
             logger_service_id: logger.psr
@@ -119,6 +120,3 @@ default:
           encryption: ~
           username:   ~
           password:   ~
-
-  service_container:
-    class: sfServiceContainer
