--- a/test/functional/fixtures/config/services.yml
+++ b/test/functional/fixtures/config/services.yml
@@ -1,9 +1,8 @@
-all:
-  parameters:
-    my_project_param: foo
-    other_param: quz
+parameters:
+  my_project_param: foo
+  other_param: quz
 
-  services:
-    my_project_service:
-      class: sfOutputEscaperSafe
-      arguments: [%my_project_param%, %sf_cache_dir%]
+services:
+  my_project_service:
+    class: sfOutputEscaperSafe
+    arguments: ['%my_project_param%', '%sf_cache_dir%']
